TestSuite/PascalABCTests/errors/err0340_multiple_where.pas
procedure p1<T1,T2>(a: T1; b: T2); where T1, T2: record;
begin end;

begin
  p1(0, '');
end.